# que-lambda

./: CHANGELOG.md  README.md  flake.nix  que-lambda.cabal
src/: QueryExamples.hs  SqlDsl.hs
src/QueLambda/: GenSql.hs  Hs.hs  MetaCircular.hs  Symantics.hs
src/QueLambda/Optimizations/: ForFor.hs  ForWhere1.hs  ForYield.hs  WhereFor.hs  WhereWhere.hs
