cabal-version:      3.4
name:               que-lambda
version:            0.1.0.0
synopsis:
    SQL DSL, derived from https://okmij.org/ftp/meta-programming/quel.pdf

-- description:
license:            AGPL-3.0-or-later
license-file:       LICENSE
author:             Philip Lykke Carlsen
maintainer:         plcplc@gmail.com
-- copyright:
category:           Database
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
      QueLambda.GenSql
      QueLambda.Hs
      QueLambda.MetaCircular
      QueLambda.Optimizations.ForFor
      QueLambda.Optimizations.ForWhere1
      QueLambda.Optimizations.ForYield
      QueLambda.Optimizations.WhereFor
      QueLambda.Optimizations.WhereWhere
      QueLambda.Symantics
      QueryExamples

    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0,
      mtl
    hs-source-dirs:   src
    default-language: GHC2021
    default-extensions:
      BlockArguments
      DefaultSignatures
      FunctionalDependencies
      LambdaCase
      RecordWildCards
      TypeFamilies

test-suite que-lambda-test
    import:           warnings
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.16.4.0,
        que-lambda
